added controller on edit page for marketing template

--- a/web-client/web-client/view/marketing/marketing-template/marketing.html
+++ b/web-client/web-client/view/marketing/marketing-template/marketing.html
@@ -73,7 +73,7 @@
       <div style="clear: both;padding: 20px 0;">
            <div class="side-icon-pop">
                     <ul ng-show="singleSelect">
-                        <li ng-class="{active:isActiveTab({ url:'view/marketing/marketing-template/edit_create_marketing _template.html'})}" ng-click="onClickTab({ url:'view/marketing/marketing-template/edit_create_marketing _template.html'}); addTab({title: 'Edit Templates', url: 'view/marketing/marketing-template/edit_create_marketing _template.html'} )">
+                        <li ng-class="{active:isActiveTab({ url:'view/marketing/marketing-template/edit_create_marketing_template.html'})}" ng-click="onClickTab({ url:'view/marketing/marketing-template/edit_create_marketing_template.html'}); addTab({name: 'Edit Templates', url: 'view/marketing/marketing-template/edit_create_marketing_template.html'} )">
                           <a><img src="images/icon_edit.png"  title ="Edit" alt ="Edit"/></a>
                         </li>
                         <li ng-class="{active:isActiveTab({ url:'view/marketing/marketing-template/copyMarketingtemplates.html'})}" ng-click="addTab({name: 'copy marketing Templates'} )">
